# tiralabra

./: .gitignore  README.md  maarittelydokumentti.md  testausdokumentti.md  toteutusdokumentti.md
Documentation/: Implementation document.md  Specification document.md  Testing document.md  User manual.md
Main/: .coverage  .pylintrc  alphabeta.py  double.py  function.py  main.py  parameters.py  play.py  pyproject.toml  run_all_tests.sh  start.py  tasks.py  tictactoe.py
Main/Heuristics/: basic_check.py  boundaries_check.py  closeness_check.py  helper.py  mustwin_check.py  prevent_mustwins.py  run_heuristics.py  sanity_check.py
Main/Start/: board.py  confirm.py  first_move.py  level.py  players.py  recap.py  start.py
Main/Tests/: Test_alphabeta.py  Test_parameters.py  Test_play.py  Test_start.py  Test_tictactoe.py  test_alphabeta.py  test_parameters.py  test_play.py  test_start.py  test_tictactoe.py  unit_test.py
Main/Tests/Heuristics/: Test_basic_check.py  Test_boundaries_check.py  Test_closeness_check.py  Test_mustwin_check.py  Test_run_heuristics.py  Test_sanity_check.py  test_basic_check.py  test_boundaries_check.py  test_closeness_check.py  test_mustwin_check.py  test_prevent_mustwins.py  test_run_heuristics.py  test_sanity_check.py
Main/Tests/Practise/: test_example.py
Main/Tests/Start/: Test_Start.py  test_start.py
Ohjelma/: alphabeta.py  main.py  parameters.py  start.py  tictactoe.py
Testailua/: tulostus.py
Weekly reports/: viikkoraportti-4.md
viikkoraportit/: viikkoraportti-1.md  viikkoraportti-2.md  viikkoraportti-3.md
(+13 files in other folders)
