[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Rami Piik <rami.piik@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pylint = "^2.11.1"
black = "^21.9b0"
coverage = "^6.0.1"
invoke = "^1.6.0"
unittest = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
